<resources>
    <string name="app_name">掌上游</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">游戏专题</string>
    <string name="exit_tip">再按一次即可退出&#8230;</string>
    <string name="connect_failed">初始化失败</string>
    <string name="is_reconnect">连接服务器失败,是否重新连接</string>
    <string name="secong_launcher">ATET钱包</string>
    <string name="proluance_success">发布成功</string>
    <string name="kindly_reminder">温馨提示</string>
    <string name="not_support_display">非常抱歉，欢乐沃不支持您手机的分辨率</string>
    <string name="not_support_display_goback">退出</string>
    <string name=" code_sys_illegal_opera">非法操作</string>
    <string name="launcher_account_code_login_param_error">登录参数错误</string>
    <string name="launcher_account_code_username_format_error">用户名格式错误</string>
    <string name="launcher_account_code_password_format_error">密码格式错误</string>
    <string name="launcher_account_code_chinesename_format_error">中文名格式错误</string>
    <string name="launcher_account_code_phone_format_error">手机号格式错误</string>
    <string name="launcher_account_code_email_format_error">邮箱格式错误</string>
    <string name="launcher_account_code_wechat_format_error">微信号格式错误</string>
    <string name="launcher_account_code_qq_format_error">QQ号格式错误</string>
    <string name="launcher_account_code_deviceid_format_error">设备ID格式错误</string>
    <string name="launcher_account_code_user_primary_key_error">用户主键ID无效</string>
    <string name="launcher_account_code_old_password_error">旧密码错误</string>
    <string name="launcher_account_code_new_password_error">新密码错误</string>
    <string name="launcher_account_nickname_format_error">昵称格式错误</string>
    <string name="launcher_account_user_not_exits">此用户不存在</string>
    <string name="launcher_account_user_frozen">该用户已被冻结</string>
    <string name="launcher_account_user_locked">该用户已被锁定</string>
    <string name="launcher_account_user_password_error">账号密码错误</string>
    <string name="launcher_account_register_fail">注册失败</string>
    <string name="launcher_account_user_exits">该用户已存在</string>
    <string name="launcher_account_two_password_not_match">两次输入的密码不一致</string>
    <string name="launcher_account_user_name_null">用户名为空</string>
    <string name="launcher_account_password_null">密码为空</string>
    <string name="launcher_account_email_null">邮箱为空</string>
    <string name="launcher_account_nickname_null">昵称为空</string>
    <string name="launcher_account_deviceid_error">设备id错误</string>
    <string name="launcher_account_device_code_error">设备code错误</string>
    <string name="launcher_account_login_successed">登录成功</string>
    <string name="launcher_account_reg_successed">注册成功</string>
    <string name="launcher_account_login_failed">登陆失败   :</string>
    <string name="launcher_account_reg_failed">注册失败   :</string>
    <string name="launcher_account_user_name_all_number">用户名必须是以字母开头</string>
    <string name="launcher_account_password_error_format">密码格式不正确</string>
    <string name="launcher_account_login_error">登陆发生异常，操作失败</string>
    <string name="launcher_account_reg_error">注册异常，无有效的网络连接或者是后台服务器发生错误。</string>
    <string name="com_http_request_exception">执行网络请求时出现异常</string>
    <string name="com_http_response_exception">请求失败，服务器无响应</string>
    <string name="com_illegal_argument_exception">无效的请求参数</string>
    <string name="com_illegal_url_exception">请求的URL格式不正确</string>
    <string name="com_image_download_exception">图片下载失败</string>
    <string name="com_image_file_not_found_exception">访问的本地图片不存在</string>
    <string name="com_network_not_found_exception">没有网络连接</string>
    <string name="com_sdcard_not_found_exception">请插入SDCard</string>
    <string name="two_pwd_not_same">两次密码输入不一致</string>
    <string name="com_json_parse_exception">数据解析出错</string>
    <string name="com_default_prompt_msg">无效的操作，请稍后再试</string>
    <string name="com_xml_parse_exception">数据解析出错</string>
    <string name="com_net_fail_exception">连接服务器失败</string>
    <string name="commom_net_prompt">网络不给力，请稍候刷新</string>
    <string name="common_click_break">点击刷新</string>
    <string name="network_out_of_link">网络不可用</string>
    <string name="get_deviceid_success">获取设备信息成功</string>
    <string name="get_deviceid_fail">获取设备信息失败</string>
    <string name="get_deviceid_nodata">无匹配数据</string>
    <string name="code_sys_success">操作成功</string>
    <string name="code_sys_invalid_option">非法操作</string>
    <string name="code_sys_inner_error">系统内部错误</string>
    <string name="code_sys_json_parse_error">请求json格式解析错误</string>
    <string name="code_sys_request_params_error">获取请求参数错误</string>
    <string name="code_sys_invalid_token">令牌无效</string>
    <string name="code_token_create_error">创建令牌错误</string>
    <string name="code_sign_id_empty">用户ID为空</string>
    <string name="code_sign_pwd_empty">用户密码为空</string>
    <string name="code_sign_imei_empty">IMEI为空</string>
    <string name="code_sign_signature_empty">程序签名为空</string>
    <string name="code_sign_signature_pwd_empty">程序签名密码为空</string>
    <string name="code_sign_user_exist">用户已存在</string>
    <string name="code_sign_user_not_exist">用户不存在</string>
    <string name="code_sign_user_pwd_error">用户密码错误</string>
    <string name="code_sign_get_pkey_error">获取密钥失败</string>
    <string name="code_sign_signature_invalid">程序签名验证不通过</string>
    <string name="code_pay_id_or_pwd_empty">用户ID或密码为空</string>
    <string name="code_pay_user_not_exist">用户不存在</string>
    <string name="code_pay_user_pwd_error">用户密码错误</string>
    <string name="code_pay_not_enough_money">余额不足</string>
    <string name="code_pay_conflict">数值被篡改</string>
    <string name="code_prepaid_user_not_exist">用户不存在</string>
    <string name="code_prepaid_account_not_exist">用户账户不存在</string>
    <string name="code_prepaid_3td_part_error">第三方充值失败</string>
    <string name="code_prepaid_conflict">数值被篡改</string>
    <string name="code_order_not_exist_by_orderid">没有与订单号对应的记录</string>
    <string name="code_order_not_exist_by_userid">没有与用户ID对应的订单</string>
    <string name="register_name_digits">_0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="register_password_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="code_game_no_required_data">没有符合要求的数据</string>
    <string name="code_game_id_not_exist">该游戏ID不存在</string>
    <string name="code_game_post_fail">发布帖子失败</string>
    <string name="code_square_uppost_fail">顶帖子失败</string>
    <string name="code_square_reply_post_fail">回复帖子失败</string>
    <string name="code_square_query_post_fail">查询帖子详情失败</string>
    <string name="code_comment_reply_fail">回复评论失败</string>
    <string name="code_user_feedback_fail">提交意见反馈失败</string>
    <string name="code_user_modify_fail">修改用户信息失败</string>
    <string name="code_user_query_fail">查询用户信息失败</string>
    <string name="code_user_insert_fail">保存用户信息失败</string>
    <string name="common_no_data">亲，没有内容！</string>
    <string name="common_whilingLoad">正在努力加载中...</string>
    <string name="main_game_zone">游戏</string>
    <string name="main_square">二维码</string>
    <string name="main_qrcode">二维码</string>
    <string name="main_manage_game">管理</string>
    <string name="main_user_center">用户</string>
    <string name="hintNocamera">初始化摄像头失败，请检查是否被安全软件禁用</string>
    <string name="qrcode_scan_head_title">扫描二维码</string>
    <string name="qrcode_scan_failed">获取二维码信息失败，请重扫二维码!</string>
    <string name="qrcode_scan_from_tv">扫描二维码至手机</string>
    <string name="qrcode_hint_pay">注：仅限于扫描手机支付和游戏下载二维码！</string>
    <string name="qrcode_scanning_hint">请将二维码放入框内</string>
    <string name="game_epic_recommend">史诗推荐</string>
    <string name="game_best_game">精品游戏</string>
    <string name="game_game_special">游戏专题</string>
    <string name="game_topic_game">专题游戏</string>
    <string name="game_game_detail">游戏详情</string>
    <string name="game_commentary">评论</string>
    <string name="game_handle">手柄游戏（%d）</string>
    <string name="game_normal">普通游戏（%d）</string>
    <string name="game_you_like">也许你也喜欢</string>
    <string name="game_no_more">亲，没有更多了！</string>
    <string name="game_down_num">次下载</string>
    <string name="game_share">分</string>
    <string name="game_MB">MB</string>
    <string name="game_already_savegame">已收藏</string>
    <string name="game_comm_count">评论（%d）</string>
    <string name="game_comm_reply_sucess">评论回复成功</string>
    <string name="game_content_nobare">内容不能为空</string>
    <string name="game_savegame_sucess">收藏成功</string>
    <string name="game_read_count">阅读%s次</string>
    <string name="game_search">搜索</string>
    <string name="game_change">换一换</string>
    <string name="game_whilingsearch">正在搜索中...</string>
    <string name="game_search_result_count">共有%d个搜索结果</string>
    <string name="game_conn_fail">连接服务器失败！</string>
    <string name="game_comment_fail">评论失败</string>
    <string name="game_no_comment">亲，沙发空缺中，还不快抢~</string>
    <string name="game_search_no_null">搜索条件不能为空</string>
    <string name="game_pronounce">发  表</string>
    <string name="game_Comment">评  论</string>
    <string name="game_spoken">来，说两句吧~</string>
    <string name="qr_select_dialog_title">游戏下载</string>
    <string name="qr_select_dialog_content">请选择进入游戏详情下载\n或者进入网页下载</string>
    <string name="qr_select_dialog_btn_detial">进入详情</string>
    <string name="qr_select_dialog_btn_website">进入网页</string>
    <string name="game_updata_is_have">有</string>
    <string name="game_need_updates">款游戏可以更新</string>
    <string name="game_update_goto_detail">点击进入详情</string>
    <string name="game_not_found_dia_title">温馨提示</string>
    <string name="game_not_found_dia_content">找不到该游戏，是否进入网页搜索？</string>
    <string name="game_not_found_dia_btn_sure">确定</string>
    <string name="game_not_found_dia_btn_cancle">取消</string>
    <string name="ad_game_img_type_big">欢乐沃大图</string>
    <string name="ad_game_img_type_small">欢乐沃小图</string>
    <string name="update_right_now">立刻升级</string>
    <string name="update_later">稍后升级</string>
    <string name="btn_download_install">下载</string>
    <string name="btn_collection_delete">移除</string>
    <string name="tv_softname">名称</string>
    <string name="game_manage_mygame">我的游戏</string>
    <string name="game_manage_savegame">收藏</string>
    <string name="back">返回</string>
    <string name="article_Name">游客</string>
    <string name="article_userIcon">游客头像</string>
    <string name="article_updateTime">一分钟前</string>
    <string name="article_content">测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容</string>
    <string name="article_comment">评论</string>
    <string name="article_comment_num">10</string>
    <string name="article_up">顶起</string>
    <string name="article_up_num">10</string>
    <string name="article_comment_imge">评论图片</string>
    <string name="article_list_back">返回</string>
    <string name="send_new_article">发表新话题</string>
    <string name="send">发送</string>
    <string name="article_des">说点什么吧 ~ ~</string>
    <string name="insert_image">图片</string>
    <string name="insert_icon">表情</string>
    <string name="logout">用户注销</string>
    <string name="usr_main_register">注册</string>
    <string name="usr_main_login">登录</string>
    <string name="usr_login_hint_username">用户名(5-16位)</string>
    <string name="usr_login_hint_pwd">密码(5-16位)</string>
    <string name="usr_login_hint_nick">昵称</string>
    <string name="usr_register_hint_email">邮箱</string>
    <string name="usr_register_hint_phone_number">手机号</string>
    <string name="usr_register_checkbox_label">显示密码</string>
    <string name="usr_register_checkbox_label_read">已阅读并同意</string>
    <string name="usr_register_checkbox_label_linkto">使用条款及隐私协议</string>
    <string name="user_username_hint">请输入用户名</string>
    <string name="user_psd_hint">请输入密码</string>
    <string name="user_forget_psd">忘记密码 ？</string>
    <string name="user_registe_now">立即注册</string>
</resources>