<?xml version="1.0" encoding="utf-8"?>
      <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/articleItemLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageViewUserAvator"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/article_userIcon"
                android:src="@drawable/minphoto" >
            </ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="80dp"
                    android:layout_height="20dp"
                    android:text="@string/article_Name"
                    android:textSize="18dp" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvArticleContent"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/article_content"
                    android:textSize="13sp" />

                <ImageView
                    android:id="@+id/imageArticleContentImage"
                    android:layout_width="fill_parent"
                    android:layout_height="80dp"
                    android:layout_marginRight="20dp"
                    android:contentDescription="@string/article_comment_imge"
                     />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvPublishTime"
                    android:layout_width="80dp"
                    android:layout_height="20dp"
                    android:text="@string/article_updateTime"
                    android:textColor="#63B8FF"
                    android:textSize="10sp" >
                </TextView>

                <Button
                    android:id="@+id/btnComment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:background="@drawable/article_commet" />

                <TextView
                    android:id="@+id/tvcommentNum"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/article_comment_num"
                    android:textColor="#63B8FF"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btnUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/article_up"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/tvUPNum"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/article_up_num"
                    android:textColor="#63B8FF"
                    android:textSize="15sp" />
            </LinearLayout>
            
        </LinearLayout>
        
    </LinearLayout>
