<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/common_bg" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <include layout="@layout/layout_common_header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/usr_username_left_icon"
                android:gravity="center_vertical" >

                <EditText
                    android:id="@+id/etUsername"
                    style="@style/AppearenceEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/register_name_digits"
                    android:hint="@string/usr_login_hint_username"
                    android:maxLength="16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/user_nick_reg"
                android:gravity="center_vertical" >

                <EditText
                    android:id="@+id/etnickname"
                    style="@style/AppearenceEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usr_login_hint_nick"
                    android:inputType="text"
                    android:maxLength="16"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/user_email_icon"
                android:gravity="center_vertical" >

                <EditText
                    android:id="@+id/etemail"
                    style="@style/AppearenceEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usr_register_hint_email"
                    android:inputType="text"
                    android:maxLength="30"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/user_phone_number"
                android:gravity="center_vertical" >

                <EditText
                    android:id="@+id/etphonenumber"
                    style="@style/AppearenceEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usr_register_hint_phone_number"
                    android:inputType="phone"
                    android:maxLength="16"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/usr_pwd_left_icon"
                android:gravity="center_vertical" >

                <EditText
                    android:id="@+id/etPwd"
                    style="@style/AppearenceEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/register_name_digits"
                    android:hint="@string/usr_login_hint_pwd"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical" >

                <CheckBox
                    android:id="@+id/cbPwdVisible"
                    style="@style/AppearenceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="0dp"
                    android:button="@drawable/btn_clause_bg"
                    android:checked="false"
                    android:text="@string/usr_register_checkbox_label"
                    android:textColor="@color/color5"
                    android:textSize="12sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnRegister"
                style="@style/AppearenceText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_register_bg"
                android:text="@string/usr_main_register" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/chkBoxClause"
                android:layout_width="26dp"
                android:layout_height="28dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="0dp"
                android:button="@drawable/btn_clause_bg"
                android:checked="true"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvRead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/usr_register_checkbox_label_read"
                android:textColor="@color/color1"
                android:textSize="@dimen/font3" />

            <TextView
                android:id="@+id/tvLinkTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:text="@string/usr_register_checkbox_label_linkto"
                android:textColor="@color/color9"
                android:textSize="@dimen/font3" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>